<resources>
    <string name="app_name">Mobile Banking</string>
    <string name="tvLogin">Veuillez vous identifier SVP!!!</string>
    <string name="etLogin">Login</string>
    <string name="etPassword">Password</string>
    <string name="bConnect">Se Connecter</string>
    <string name="bSavingAccount">Saving Account</string>
    <string name="bCheckingAccount">Checking Account</string>
    <string name="bBusinessAccount">Business Account</string>
    <string name="tvSignIn">Créer un compte</string>
    <string name="etUsername">Username</string>
    <string name="etNom">Nom</string>
    <string name="etPrenom">Prenom</string>
    <string name="bSinscrire">S\'inscrire</string>
    <string name="bAnnuler">Annuler</string>
    <string name="etTypeCompte">Type de Compte</string>
    <string name="title_activity_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
