<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bakeli.mobilebanking.activities.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_above="@+id/editText"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="16dp"
        tools:text="@string/tvLogin" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="368dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/etLogin"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="60dp"
        android:layout_marginBottom="29dp"
        android:layout_above="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="368dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="125dp"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:text="@string/bConnect"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="177dp"
        android:layout_marginBottom="82dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/tvSignIn" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/mob"
        android:layout_marginTop="31dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

</RelativeLayout>
