<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bakeli.mobilebanking.HomeActivity">

    <Button
        android:id="@+id/bEpargne"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="91dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/bSavingAccount"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="64dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/bCourant"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="49dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/bCheckingAccount"
        android:layout_below="@+id/bEpargne"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/bBusiness"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bCourant"
        android:layout_marginTop="43dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/bBusinessAccount" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:text="Veuillez choisir votre type de compte"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
